--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -33,6 +33,8 @@
     "   - allows the data to be aggregated and transformed (for example, reducing the latitude and longitude dimensions while preserving the height dimension in order to assess the accuracy at different vertical levels).\n",
     "3. Calculate the desired metrics from the contingency tables produced in step two. `scores` contains the following binary categorical scores:\n",
     "   - accuracy (fraction correct)\n",
+    "   - base rate\n",
+    "   - forecast rate\n",
     "   - frequency bias (bias score)\n",
     "   - hit rate (true positive rate, probability of detection, sensitivity, recall)\n",
     "   - false alarm ratio\n",
@@ -46,6 +48,7 @@
     "   - Heidke skill score (Cohen's kappa)\n",
     "   - odds ratio\n",
     "   - odds ratio skill score (Yule's Q)\n",
+    "   - Symmetric Extremal Dependence Index (SEDI)\n",
     "\n",
     "\n",
     "`scores` provides support for all three steps, plus convenient functions for working efficiently. Most of the `scores` APIs are functional in nature, however introducing some classes (see below) makes binary categorical metrics much easier to calculate and work with. This notebook starts with simple examples and builds up to more complex ones."
@@ -3149,7 +3152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
