JOSS Paper (a) adds Peirce citation and (b) changes False Alarm Rate to False Alarm Ratio (FAR) in table

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -412,3 +412,15 @@
   year={1884},
   publisher={American Periodicals Series III}
 }
+@article{Peirce:1884
+	author = {C. S. Peirce },
+	title = {The Numerical Measure of the Success of Predictions},
+	journal = {Science},
+	volume = {ns-4},
+	number = {93},
+	pages = {453-454},
+	year = {1884},
+	doi = {10.1126/science.ns-4.93.453.b},
+	URL = {https://www.science.org/doi/abs/10.1126/science.ns-4.93.453.b},
+	eprint = {https://www.science.org/doi/pdf/10.1126/science.ns-4.93.453.b}
+}
