Modifies paper.bib

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -412,8 +412,8 @@
   year={1884},
   publisher={American Periodicals Series III}
 }
-@article{Peirce:1884
-	author = {C. S. Peirce },
+@article{Peirce:1884,
+	author = {C. S. Peirce},
 	title = {The Numerical Measure of the Success of Predictions},
 	journal = {Science},
 	volume = {ns-4},
