Rename notebook and add full references

--- a/tutorials/Fractions Skill Score.ipynb
+++ b/tutorials/Fractions Skill Score.ipynb
@@ -8,10 +8,13 @@
     "# Fractions Skill Score (FSS)\n",
     "\n",
     "The original paper, and formal definitions can be found here:  \n",
-    "https://doi.org/10.1175/2007MWR2123.1\n",
+    "\n",
+    "Roberts, N. M., & Lean, H. W. (2008). Scale-Selective Verification of Rainfall Accumulations from High-Resolution Forecasts of Convective Events. Monthly Weather Review, 136(1), 78-97. https://doi.org/10.1175/2007MWR2123.1\n",
+    "\n",
     "\n",
     "For an explanation of the FSS, and implementation considerations, see:  \n",
-    "http://dx.doi.org/10.54302/mausam.v66i3.555"
+    "\n",
+    "Faggian, N., Roux, B., Steinle, P., & Ebert, B. (2015). Fast calculation of the fractions skill score. MAUSAM, 66(3), 457–466. https://doi.org/10.54302/mausam.v66i3.555"
    ]
   },
   {
@@ -2361,7 +2364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
