--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -83,6 +83,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7def466e-1cde-4e6e-8245-41b5aa7a04c7",
+   "metadata": {},
+   "source": [
+    "## Spatial\n",
+    "- [Fractions Skill Score](./Fractions_Skill_Score.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c8765192",
    "metadata": {
     "tags": [
@@ -113,10 +122,7 @@
    "cell_type": "markdown",
    "id": "1035fdb8-418a-40f8-b15e-bab32192b9f1",
    "metadata": {},
-   "source": [
-    "## Spatial\n",
-    "- [Fractions Skill Score](./FSS.ipynb)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -159,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
