Tag Fractions Skill Score metadata for nbsphinx generation

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -84,9 +84,14 @@
   {
    "cell_type": "markdown",
    "id": "7def466e-1cde-4e6e-8245-41b5aa7a04c7",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
    "source": [
     "## Spatial\n",
+    "\n",
     "- [Fractions Skill Score](./Fractions_Skill_Score.ipynb)"
    ]
   },
