(ready to merge) - Fractions skill score (#266)
* [skip ci] add initial implementation of numpy-based fss computation for single field
* [skip ci][notebook] Notebook for calculating FSS for single 2D field
* fine-grained tests
* [feat] add zero-padding option
* [refactor]: move computation backend to `scores.fast.fss`
* [refactor]: move fss to spatial
* Apply suggestions from code reviews
* [tests]: Add a battery of curated tests

---------

Signed-off-by: Nikeeth Ramanathan <nikeeth.ramanathan@gmail.com>
Co-authored-by: nr <nikeeth.ramanthan@gmail.com>
Co-authored-by: Nicholas Loveday <48701367+nicholasloveday@users.noreply.github.com>
Co-authored-by: Tennessee Leeuwenburg <tennessee.leeuwenburg@bom.gov.au>

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -83,6 +83,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7def466e-1cde-4e6e-8245-41b5aa7a04c7",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
+   "source": [
+    "## Spatial\n",
+    "\n",
+    "- [Fractions Skill Score](./Fractions_Skill_Score.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c8765192",
    "metadata": {
     "tags": [
@@ -108,6 +122,12 @@
     "## Processing\n",
     "- [Isotonic Regression and Reliability Diagrams](./Isotonic_Regression_And_Reliability_Diagrams.ipynb)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1035fdb8-418a-40f8-b15e-bab32192b9f1",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
