Adds references for SEDI & FSS

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -424,3 +424,30 @@
 	URL = {https://www.science.org/doi/abs/10.1126/science.ns-4.93.453.b},
 	eprint = {https://www.science.org/doi/pdf/10.1126/science.ns-4.93.453.b}
 }
+@article{Ferro:2011,
+  author = "Christopher A. T. Ferro and David B. Stephenson",
+  title = "Extremal Dependence Indices: Improved Verification Measures for Deterministic Forecasts of Rare Binary Events",
+  journal = "Weather and Forecasting",
+  year = "2011",
+  publisher = "American Meteorological Society",
+  address = "Boston MA, USA",
+  volume = "26",
+  number = "5",
+  doi = "10.1175/WAF-D-10-05030.1",
+  pages=      "699 - 713",
+  url = "https://journals.ametsoc.org/view/journals/wefo/26/5/waf-d-10-05030_1.xml"
+}
+@article {Roberts:2008,
+  author = "Nigel M. Roberts and Humphrey W. Lean",
+  title = "Scale-Selective Verification of Rainfall Accumulations from High-Resolution Forecasts of Convective Events",
+  journal = "Monthly Weather Review",
+  year = "2008",
+  publisher = "American Meteorological Society",
+  address = "Boston MA, USA",
+  volume = "136",
+  number = "1",
+  doi = "10.1175/2007MWR2123.1",
+  pages=      "78 - 97",
+  url = "https://journals.ametsoc.org/view/journals/mwre/136/1/2007mwr2123.1.xml"
+}
+
