Fixing an issue with SEDI citation

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -425,7 +425,7 @@
 	eprint = {https://www.science.org/doi/pdf/10.1126/science.ns-4.93.453.b}
 }
 @article{Ferro:2011,
-  author = "Christopher A. T. Ferro and David B. Stephenson",
+  author = "C. A. T. Ferro and David B. Stephenson",
   title = "Extremal Dependence Indices: Improved Verification Measures for Deterministic Forecasts of Rare Binary Events",
   journal = "Weather and Forecasting",
   year = "2011",
