Rename forecast_events to fcst_events and observed_events to obs_events

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -1477,7 +1477,7 @@
    "source": [
     "# Further, if it turn out you want them, the event tables are still there \n",
     "\n",
-    "contingency_manager.forecast_events"
+    "contingency_manager.fcst_events"
    ]
   },
   {
