--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -6,20 +6,18 @@
    "source": [
     "# Consistent scores\n",
     "\n",
-    "A \"consistent scoring function\" is a scoring function where following a forecast directive will optimise the forecaster's expected score. It is important to use consistent scoring functions to avoid the \"forecaster's dilemma\" ([Lerch et al., 2017](https://projecteuclid.org/journals/statistical-science/volume-32/issue-1/Forecasters-Dilemma-Extreme-Events-and-Forecast-Evaluation/10.1214/16-STS588.full)) (i.e., should a forecaster issue an honest forecast or should they issue one that optimises their expected score?).\n",
+    "A \"consistent scoring function\" is a scoring function where following a forecast directive will optimise the forecaster's expected score. It is important to use consistent scoring functions to avoid the \"forecaster's dilemma\" ([Lerch et al., 2017](https://projecteuclid.org/journals/statistical-science/volume-32/issue-1/Forecasters-Dilemma-Extreme-Events-and-Forecast-Evaluation/10.1214/16-STS588.full)) (i.e., should a forecaster issue an honest forecast or should they issue one that optimises their expected score?). Consistent scoring rules are formally defined in([Gneiting et al., 2011](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
     "\n",
     "\n",
     "The MSE is a consistent score for forecasting the mean and the MAE is a consistent score for forecasting the median. But did you know that there are a whole family of scores that are consistent for prediciting the mean, median, or a quantile? \n",
     "\n",
-    "Score's consistent scoring module provides access to these families of consistent scores that can we used to emphasise predictive performance across desired decision thresholds.\n",
+    "`score`'s consistent scoring module provides access to these families of consistent scores that can we used to emphasise predictive performance across desired decision thresholds.\n",
     "\n",
     "### Example 1. A score consistent with the mean\n",
-    "Let's jump into an example that illustrates a scoring function that is consistent with predicting the mean value using `scores`. Suppose we want to evaluate the performance of expected minimum temperature forecasts, but we only want to focus on performance for decision thresholds below 4°C.\n",
+    "Let's jump into an example that illustrates a scoring function that is consistent with predicting the mean value using `scores`. Suppose we want to evaluate the performance of expected daily precipitation forecasts, but we want to place increasing importance on correctly forecasting extreme values. \n",
     "\n",
     "\n",
-    "*ADD phi and phi prime* definition here\n",
-    "\n",
-    "Medians relate to quantiles in an analogous way to how the mean relates to [expectiles](https://en.wikipedia.org/wiki/Expectile).\n",
+    "We want to used the `consistent_expectile_score` in `scores`` to evaluate the expected daily precipitation forecasts. Note that medians relate to quantiles in an analogous way to how the mean relates to [expectiles](https://en.wikipedia.org/wiki/Expectile).\n",
     "\n",
     "Our consistent scoring function for expectiles is \n",
     "\n",
@@ -40,24 +38,21 @@
     "\n",
     "To make the expectile the consistent with the mean, set $\\alpha=0.5$.\n",
     "\n",
+    "Next we need to determine our $\\phi(z)$ and $\\phi'(z)$ functions. Let's assume that that the importance of predicting extreme rainfall increases exponentially.\n",
     "\n",
+    "First we create the weighting function\n",
     "\n",
+    "$$\\phi''(z) = \\exp ^\\frac{z}{10}$$ \n",
     "\n",
+    "This will place increasing importance on more extreme rainfall thresholds.\n",
     "\n",
+    "Next we need to integrate $\\phi''(z)$ twice so that we can derive the functions for our consistent scoring function.\n",
     "\n",
+    "$$\\phi'(z) = 10\\exp ^\\frac{z}{10}$$ \n",
+    "and \n",
+    "$$\\phi(z) = z + 100\\exp ^\\frac{z}{10}$$ \n",
     "\n",
-    "\n",
-    ", placing an increasing emphasis on higher rainfall decision thresholds in a linear manner, we need to define a suitable weighting function $\\phi''(s)$. Since rainfall forecasts and observations cannot be negative, we \n",
-    "set $\\phi''(s) =s$. \n",
-    "\n",
-    "Next we need to derive $\\phi'(s)$ and $\\phi(s)$ by integrating $\\phi''(s)$.\n",
-    "\n",
-    "$$\\phi'(s) = \\frac{s^2}{2}$$\n",
-    "\n",
-    "\n",
-    "$$\\phi'(s) = s + \\frac{x^3}{6}$$\n",
-    "\n",
-    "These equations can be substituted in $ S(x, y)$. Note that use the `consistent_expectile_score` in scores, you only need to define $\\phi(s)$ and $\\phi'(s)$, but not $S(x, y)$.\n",
+    "These equations can be substituted in $ S(x, y)$. Note that to use the `consistent_expectile_score` in scores, you only need to define $\\phi(s)$ and $\\phi'(s)$, but not $S(x, y)$.\n",
     "\n",
     "Let's illustrate how this can be done in scores using some synthetic rainfall data."
    ]
