ran black on tutorial

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "# First, let's visualise our weighting function phi''\n",
     "x = np.linspace(0, 50, 1000)\n",
-    "y = np.exp(x/10)\n",
+    "y = np.exp(x / 10)\n",
     "\n",
     "plt.figure(figsize=(4, 4))\n",
     "plt.plot(x, y)\n",
@@ -108,11 +108,12 @@
     "# define phi and phi prime\n",
     "def phi_prime(z):\n",
     "    \"\"\"Phi prime\"\"\"\n",
-    "    return 10 * np.exp(z/10)\n",
+    "    return 10 * np.exp(z / 10)\n",
+    "\n",
     "\n",
     "def phi(z):\n",
     "    \"\"\"Phi\"\"\"\n",
-    "    return z + 100 * np.exp(z/10)"
+    "    return z + 100 * np.exp(z / 10)"
    ]
   },
   {
@@ -124,32 +125,24 @@
     "# Generate some synthetic data\n",
     "lat = np.linspace(-90, 90, 10)\n",
     "lon = np.linspace(-180, 180, 20)\n",
-    "times = pd.date_range('2023-11-19', periods=5)\n",
+    "times = pd.date_range(\"2023-11-19\", periods=5)\n",
     "\n",
     "forecast = np.random.uniform(0, 100, size=(len(lat), len(lon), len(times)))\n",
-    "forecast = xr.DataArray(\n",
-    "    forecast,\n",
-    "    dims=('lat', 'lon', 'time'),\n",
-    "    coords={'lat': lat, 'lon': lon, 'time': times}\n",
-    ")\n",
+    "forecast = xr.DataArray(forecast, dims=(\"lat\", \"lon\", \"time\"), coords={\"lat\": lat, \"lon\": lon, \"time\": times})\n",
     "\n",
     "obs = forecast + np.random.random((len(lat), len(lon), len(times)))\n",
     "obs = obs.clip(min=0)\n",
-    "obs = xr.DataArray(\n",
-    "    obs,\n",
-    "    dims=('lat', 'lon', 'time'),\n",
-    "    coords={'lat': lat, 'lon': lon, 'time': times}\n",
-    ")\n",
+    "obs = xr.DataArray(obs, dims=(\"lat\", \"lon\", \"time\"), coords={\"lat\": lat, \"lon\": lon, \"time\": times})\n",
     "\n",
     "# Generate some synthetic rainfall observations between 0 and 50mm\n",
     "N = 1000\n",
     "obs = xr.DataArray(data=50 * np.random.random(N), dims=[\"time\"], coords={\"time\": np.arange(0, N)})\n",
-    "obs = obs.clip(min=0) # don't allow negative rainfall\n",
+    "obs = obs.clip(min=0)  # don't allow negative rainfall\n",
     "\n",
     "# Generate synthetic forecasts by adding noise to each observation\n",
-    "fcst1 = 0.9 * obs + skewnorm.rvs(4, size=N) # fcst1 has a low bias\n",
+    "fcst1 = 0.9 * obs + skewnorm.rvs(4, size=N)  # fcst1 has a low bias\n",
     "fcst1 = fcst1.clip(min=0)\n",
-    "fcst2 = 1.1 * obs - skewnorm.rvs(4, size=N) # fcst2 has a high bias\n",
+    "fcst2 = 1.1 * obs - skewnorm.rvs(4, size=N)  # fcst2 has a high bias\n",
     "fcst2 = fcst2.clip(min=0)"
    ]
   },
@@ -188,7 +181,7 @@
     }
    ],
    "source": [
-    "# However, when we calculate the performance of these forecasts with increasing focus on \n",
+    "# However, when we calculate the performance of these forecasts with increasing focus on\n",
     "# extreme decision thresholds, we see that the performance is quite different.\n",
     "fcst1_cons_score = consistent_expectile_score(fcst1, obs, alpha=0.5, phi=phi, phi_prime=phi_prime).item()\n",
     "fcst2_cons_score = consistent_expectile_score(fcst2, obs, alpha=0.5, phi=phi, phi_prime=phi_prime).item()\n",
@@ -245,8 +238,8 @@
     "# Plot the results\n",
     "ms1[\"Mean elementary score\"].plot()\n",
     "ms2[\"Mean elementary score\"].plot()\n",
-    "plt.title('fcst1 (blue), fcst2 (orange)')\n",
-    "plt.suptitle('Murphy Score (for mean)')"
+    "plt.title(\"fcst1 (blue), fcst2 (orange)\")\n",
+    "plt.suptitle(\"Murphy Score (for mean)\")"
    ]
   },
   {
@@ -301,7 +294,7 @@
    ],
    "source": [
     "x = np.linspace(0, 50, 1000)\n",
-    "y = -1/(x+4) + 0.5\n",
+    "y = -1 / (x + 4) + 0.5\n",
     "\n",
     "plt.figure(figsize=(4, 4))\n",
     "plt.plot(x, y)\n",
@@ -329,7 +322,7 @@
    "source": [
     "def g(z):\n",
     "    \"\"\"g(z) for our conistent score\"\"\"\n",
-    "    return 0.5*z - np.log(z+4)"
+    "    return 0.5 * z - np.log(z + 4)"
    ]
   },
   {
@@ -403,8 +396,8 @@
     "# Plot the results\n",
     "ms1[\"Mean elementary score\"].plot()\n",
     "ms2[\"Mean elementary score\"].plot()\n",
-    "plt.title('fcst1 (blue), fcst2 (orange)')\n",
-    "plt.suptitle('Murphy Score (for 90th percentile)')"
+    "plt.title(\"fcst1 (blue), fcst2 (orange)\")\n",
+    "plt.suptitle(\"Murphy Score (for 90th percentile)\")"
    ]
   },
   {
