add notebook to index

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -45,7 +45,8 @@
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
-    "- [Flip-Flop Index](./Flip_Flop_Index.ipynb)"
+    "- [Flip-Flop Index](./Flip_Flop_Index.ipynb)\n",
+    "- [Consistent Scores](./Consistent_Scores.ipynb)"
    ]
   },
   {
