update discussion about consistent scores

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -6,10 +6,15 @@
    "source": [
     "# Consistent scores\n",
     "\n",
-    "A \"consistent scoring function\" is a scoring function where a forecaster's expected score will be optimised by following a forecast directive (e.g., forecast the 90th percentile value). It is important to use consistent scoring functions to avoid the \"forecaster's dilemma\" ([Lerch et al., 2017](https://projecteuclid.org/journals/statistical-science/volume-32/issue-1/Forecasters-Dilemma-Extreme-Events-and-Forecast-Evaluation/10.1214/16-STS588.full)) (i.e., should a forecaster issue an honest forecast or should they issue one that optimises their expected score?). Consistent scoring functions are formally defined in([Gneiting et al., 2011](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
+    "A \"consistent scoring function\" is a scoring function where a forecaster's expected score will be optimised by following a forecast directive. An example of a forecast directive is to \"predict the expected rainfall amount\". Using a consistent scoring function ensures that a forecaster or forecast system developer isn't faced with the dilemma of whether to \n",
+    "\n",
+    "1. produce forecasts (or develop a forecast system) that optimises the expected verification score, or\n",
+    "2. produce an honest forecast (or develop an honest forecast system) that is consistent with the forecast directive. \n",
+    "\n",
+    "Using a consistent scoring function to evaluate forecast performance ensures that objectives both 1 and 2 can be met without any tensions. For example, the Mean Squared Error (MSE) is a consistent score for forecasting the expected rainfall amount, since forecasting the \"expected rainfall amount\" will minimise the expected MSE. However the Mean Absolute Error (MAE) is not consistent with forecasting the expected amount and is instead consistent with forecasting the median value. Consistent scoring functions are formally defined in ([Gneiting et al., 2011](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
     "\n",
     "\n",
-    "The Mean Squared Error (MSE) is a consistent score for forecasting the mean and the Mean Absolute Error (MAE) is a consistent score for forecasting the median. But did you know that there are a whole family of scores that are consistent for prediciting the mean, median, or quantiles? \n",
+    "You may already know that the MSE is a consistent score for forecasting the mean and the MAE is a consistent score for forecasting the median. But did you know that there are a whole family of scores that are consistent for prediciting the mean, median, or quantiles? \n",
     "\n",
     "The consistent scoring module in `scores` provides access to these families of consistent scores that can be used to emphasise predictive performance across desired decision thresholds.\n",
     "\n",
