--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -6,25 +6,24 @@
    "source": [
     "# Consistent scores\n",
     "\n",
-    "A \"consistent scoring function\" is a scoring function where a forecaster's expected score will be optimised by following a forecast directive. An example of a forecast directive is to \"predict the expected rainfall amount\". Using a consistent scoring function ensures that a forecaster or forecast system developer isn't faced with the dilemma of whether to \n",
+    "A \"consistent scoring function\" is a scoring function where a forecaster's expected score will be optimised by following a forecast directive. An example of a forecast directive is to \"predict the mean (i.e., expected) rainfall amount\". Using a consistent scoring function ensures that a forecaster or forecast system developer isn't faced with the dilemma of whether to \n",
     "\n",
     "1. produce forecasts (or develop a forecast system) that optimises the expected verification score, or\n",
     "2. produce an honest forecast (or develop an honest forecast system) that is consistent with the forecast directive. \n",
     "\n",
-    "Using a consistent scoring function to evaluate forecast performance ensures that objectives both 1 and 2 can be met without any tensions. For example, the Mean Squared Error (MSE) is a consistent score for forecasting the expected rainfall amount, since forecasting the \"expected rainfall amount\" will minimise the expected MSE. However the Mean Absolute Error (MAE) is not consistent with forecasting the expected amount and is instead consistent with forecasting the median value. Consistent scoring functions are formally defined in ([Gneiting et al., 2011](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
+    "Using a consistent scoring function to evaluate forecast performance ensures that objectives both 1 and 2 can be met without any tensions. For example, the Mean Squared Error (MSE) is a consistent score for forecasting the mean (i.e., expected) rainfall amount, since forecasting the \"mean rainfall amount\" will minimise the expected MSE. However the Mean Absolute Error (MAE) is not consistent with forecasting the mean value and is instead consistent with forecasting the median value. Consistent scoring functions are formally defined in ([Gneiting et al., 2011](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
     "\n",
     "\n",
     "You may already know that the MSE is a consistent score for forecasting the mean and the MAE is a consistent score for forecasting the median. But did you know that there are a whole family of scores that are consistent for prediciting the mean, median, or quantiles? \n",
     "\n",
-    "The consistent scoring module in `scores` provides access to these families of consistent scores that can be used to emphasise predictive performance across desired decision thresholds.\n",
+    "The consistent scoring module in `scores` provides access to these families of consistent scores hat can be used to tailor emphasis of predictive performance based on decision thresholds of interest.\n",
     "\n",
     "### Example 1. A score consistent with the mean\n",
     "Let's jump into an example that illustrates a scoring function that is consistent with predicting the mean value using `scores`. Suppose we want to evaluate the performance of expected daily precipitation forecasts, but we want to place increasing importance on correctly forecasting extreme values. \n",
     "\n",
+    "The mean (or expectation) functional is equivalent to the 0.5-[expectile](https://en.wikipedia.org/wiki/Expectile), so we want to use the `consistent_expectile_score` in `scores` to evaluate the expected daily precipitation forecasts. Note that the mean is identical to the 0.5-expectile in the same way that the median is identical to the 0.5-quantile (or 50th percentile).\n",
     "\n",
-    "We want to used the `consistent_expectile_score` in `scores` to evaluate the expected daily precipitation forecasts. Note that medians relate to quantiles in an analogous way to how the mean relates to [expectiles](https://en.wikipedia.org/wiki/Expectile).\n",
-    "\n",
-    "Our consistent scoring function for expectiles is \n",
+    "A scoring function $S$ that is consistent for the alpha-expectile takes the following form:\n",
     "\n",
     " $$ S(x, y) =\n",
     "    \\begin{cases}\n",
@@ -41,9 +40,9 @@
     "- $\\phi'$ is the [subderivative](https://en.wikipedia.org/wiki/Subderivative) of $\\phi$. The subderivative is a generalisation of the derivative for convex functions and coincides with the derivative when the convex function is differentiable\n",
     "- $S(x,y)$ is the score.\n",
     "\n",
-    "To make the expectile the consistent with the mean, set $\\alpha=0.5$.\n",
+    "In this chase, we choose $\\alpha=0.5$, since the 0.5-expectile is identical to the mean.\n",
     "\n",
-    "Next we need to determine our $\\phi(z)$ and $\\phi'(z)$ functions. Let's assume that that the importance of predicting extreme rainfall increases exponentially.\n",
+    "Let's assume that the importance of accurate prediction increases exponentially with increasing decision threshold $z$. We then need to determine our $\\phi(z)$ and $\\phi'(z)$ functions. \n",
     "\n",
     "First we create the weighting function\n",
     "\n",
@@ -55,12 +54,12 @@
     "\n",
     "$$\\phi'(z) = 10e^\\frac{z}{10}$$ \n",
     "and \n",
-    "$$\\phi(z) = z + 100e^\\frac{z}{10}$$ \n",
+    "$$\\phi(z) = 100e^\\frac{z}{10}$$ \n",
     "\n",
     "These equations with $\\alpha=0.5$ can be substituted into $ S(x, y)$ to create our consistent scoring function\n",
     "\n",
     "$$\n",
-    "S(x,y) = \\frac{1}{2}(y + 100e^\\frac{y}{10} - x + 100e^\\frac{x}{10} - (10e^\\frac{x}{10})(y-x))\n",
+    "S(x,y) = \\frac{1}{2}(100e^\\frac{y}{10} - 100e^\\frac{x}{10} - (10e^\\frac{x}{10})(y-x))\n",
     "$$\n",
     "\n",
     "Note that to use the `consistent_expectile_score` in scores, you only need to define $\\phi(z)$ and $\\phi'(z)$, but not $S(x, y)$.\n",
@@ -129,7 +128,7 @@
     "\n",
     "def phi(z):\n",
     "    \"\"\"Phi\"\"\"\n",
-    "    return z + 100 * np.exp(z / 10)"
+    "    return 100 * np.exp(z / 10)"
    ]
   },
   {
@@ -259,9 +258,9 @@
    "source": [
     "### Example 2. A score consistent with a quantile\n",
     "\n",
-    "Suppose we have a 90th percentile wind speed forecast that we want to evaluate, emphasising performance for higher thresholds. We can use the `consistent_quantile_score` in `scores`.\n",
+    "Suppose we have a 90th percentile wind speed forecast that we want to evaluate. Additionally, we wish to emphasise predictive performance for higher decision thresholds. We can use the `consistent_quantile_score` in `scores`.\n",
     "\n",
-    "Our consistent quantile score is defined as\n",
+    "Every consistent score for an alpha-quantile has the form $S$, where\n",
     "\n",
     "$$ S(x, y) = \\begin{cases}(1 - \\alpha)(g(x) - g(y)), & y < x \\\\\\alpha(g(y) - g(x)), & x \\leq y\\end{cases}$$\n",
     "\n",
