--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -42,6 +42,8 @@
     "\n",
     "In this chase, we choose $\\alpha=0.5$, since the 0.5-expectile is identical to the mean.\n",
     "\n",
+    "If one wants to control the relative importance of predictive performance across different decision thresholds, they must first create a weighting function $\\phi''$ which is the second subderivative of $\\phi$.\n",
+    "\n",
     "Let's assume that the importance of accurate prediction increases exponentially with increasing decision threshold $z$. We then need to determine our $\\phi(z)$ and $\\phi'(z)$ functions. \n",
     "\n",
     "First we create the weighting function\n",
@@ -59,19 +61,19 @@
     "These equations with $\\alpha=0.5$ can be substituted into $ S(x, y)$ to create our consistent scoring function\n",
     "\n",
     "$$\n",
-    "S(x,y) = \\frac{1}{2}(100e^\\frac{y}{10} - 100e^\\frac{x}{10} - (10e^\\frac{x}{10})(y-x))\n",
+    "S(x,y) = \\frac{1}{2}(100e^\\frac{y}{10} - 110e^\\frac{x}{10})(y-x)\n",
     "$$\n",
     "\n",
     "Note that to use the `consistent_expectile_score` in scores, you only need to define $\\phi(z)$ and $\\phi'(z)$, but not $S(x, y)$.\n",
     "\n",
-    "\n",
+    "Also note that the squared loss (used in MSE) can be created with $\\phi(z)=2z^2$ with $\\alpha=0.5$. We leave this as an exercise for the reader to show that $S(x,y)=(x-y)^2$ when $\\phi(z)=2z^2$ and $\\alpha=0.5$.\n",
     "\n",
     "Let's illustrate how this can be done in scores using some synthetic rainfall data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,15 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fcst1 consistent score = 68.63380545604232\n",
-      "fcst2 consistent score = 113.68295812006347\n"
+      "fcst1 consistent score = 67.77792339205789\n",
+      "fcst2 consistent score = 114.52858223319328\n"
      ]
     }
    ],
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +213,7 @@
        "Text(0.5, 0.98, 'Murphy Score (for mean)')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,6 +274,8 @@
     "- $g$ is a nondecreasing function of a single variable\n",
     "- $S(x,y)$ is the score.\n",
     "\n",
+    "Similar to how $\\phi''$ was our weighting function in the first example, in this case $g'$ is our weighting function.\n",
+    "\n",
     "Now suppose we want to emphasise the performance for higher thresholds, but we don't want our weights to increase exponentially like in rainfall example above. We first define our weighting function as \n",
     "\n",
     "$$g'(z)= \\frac{-1}{(z+10)}+0.5$$\n",
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -314,12 +318,14 @@
     "\n",
     "$$g(z) = 0.5z - ln(z+4)$$\n",
     "\n",
-    "To evaluate the 90th percentile forecast, we need to set $\\alpha=0.9$. Now we can use the `consistent_quantile_score`."
+    "To evaluate the 90th percentile forecast, we need to set $\\alpha=0.9$. Now we can use the `consistent_quantile_score`.\n",
+    "\n",
+    "Note that taking $\\alpha=0.5$ and $g(z)=2z$ recovers the absolute loss. Since $g'(z)$ is a constant, MAE can be interpreted as having equal weights for all decision thresholds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +376,7 @@
        "Text(0.5, 0.98, 'Murphy Score (for 90th percentile)')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -422,6 +428,7 @@
     "## Further reading\n",
     "- [Gneiting, T., 2011. Making and evaluating point forecasts. Journal of the American Statistical Association, 106(494), pp.746-762.](https://doi.org/10.1198/jasa.2011.r10138)\n",
     "- [Gneiting, T. (2011). Quantiles as optimal point forecasts. International Journal of Forecasting, 27(2), 197–207.](https://doi.org/10.1016/j.ijforecast.2009.12.015)\n",
+    "- [Savage, L. J. (1971). Elicitation of Personal Probabilities and Expectations. Journal of the American Statistical Association, 66(336), 783.](https://doi.org/10.2307/2284229)\n",
     "- [Taggart, R., 2022. Evaluation of point forecasts for extreme events using consistent scoring functions. Quarterly Journal of the Royal Meteorological Society, 148(742), pp.306-320.](https://doi.org/10.1002/qj.4206)\n",
     "- [Taggart, R.J., 2022. Point forecasting and forecast evaluation with generalized Huber loss. Electronic Journal of Statistics, 16(1), pp.201-231.](https://doi.org/10.1214/21-EJS1957)"
    ]
