add more citations

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -11,7 +11,7 @@
     "1. produce forecasts (or develop a forecast system) that optimises the expected verification score, or\n",
     "2. produce an honest forecast (or develop an honest forecast system) that is consistent with the forecast directive. \n",
     "\n",
-    "Using a consistent scoring function to evaluate forecast performance ensures that objectives both 1 and 2 can be met without any tensions. For example, the Mean Squared Error (MSE) is a consistent score for forecasting the mean (i.e., expected) rainfall amount, since forecasting the \"mean rainfall amount\" will minimise the expected MSE. However the Mean Absolute Error (MAE) is not consistent with forecasting the mean value and is instead consistent with forecasting the median value. Consistent scoring functions are formally defined in ([Gneiting et al., 2011](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
+    "Using a consistent scoring function to evaluate forecast performance ensures that objectives both 1 and 2 can be met without any tensions. For example, the Mean Squared Error (MSE) is a consistent score for forecasting the mean (i.e., expected) rainfall amount, since forecasting the \"mean rainfall amount\" will minimise the expected MSE. However the Mean Absolute Error (MAE) is not consistent with forecasting the mean value and is instead consistent with forecasting the median value. Consistent scoring functions are formally defined in ([Gneiting et al., 2011a](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
     "\n",
     "\n",
     "You may already know that the MSE is a consistent score for forecasting the mean and the MAE is a consistent score for forecasting the median. But did you know that there are a whole family of scores that are consistent for prediciting the mean, median, or quantiles? \n",
@@ -23,7 +23,7 @@
     "\n",
     "The mean (or expectation) functional is equivalent to the 0.5-[expectile](https://en.wikipedia.org/wiki/Expectile), so we want to use the `consistent_expectile_score` in `scores` to evaluate the expected daily precipitation forecasts. Note that the mean is identical to the 0.5-expectile in the same way that the median is identical to the 0.5-quantile (or 50th percentile).\n",
     "\n",
-    "A scoring function $S$ that is consistent for the alpha-expectile takes the following form:\n",
+    "A scoring function $S$ that is consistent for the alpha-expectile takes the following form ([Savage 1971](https://doi.org/10.2307/2284229)):\n",
     "\n",
     " $$ S(x, y) =\n",
     "    \\begin{cases}\n",
@@ -58,7 +58,7 @@
     "and \n",
     "$$\\phi(z) = 100e^\\frac{z}{10}$$ \n",
     "\n",
-    "These equations with $\\alpha=0.5$ can be substituted into $ S(x, y)$ to create our consistent scoring function\n",
+    "These equations with $\\alpha=0.5$ can be substituted into $S(x, y)$ to create our consistent scoring function\n",
     "\n",
     "$$\n",
     "S(x,y) = \\frac{1}{2}(100e^\\frac{y}{10} - 110e^\\frac{x}{10})(y-x)\n",
@@ -262,7 +262,7 @@
     "\n",
     "Suppose we have a 90th percentile wind speed forecast that we want to evaluate. Additionally, we wish to emphasise predictive performance for higher decision thresholds. We can use the `consistent_quantile_score` in `scores`.\n",
     "\n",
-    "Every consistent score for an alpha-quantile has the form $S$, where\n",
+    "Every consistent score for an alpha-quantile has the form $S$ ([Gneiting 2011b](https://doi.org/10.1016/j.ijforecast.2009.12.015)), where\n",
     "\n",
     "$$ S(x, y) = \\begin{cases}(1 - \\alpha)(g(x) - g(y)), & y < x \\\\\\alpha(g(y) - g(x)), & x \\leq y\\end{cases}$$\n",
     "\n",
@@ -273,6 +273,7 @@
     "- $\\alpha$ is the quantile level\n",
     "- $g$ is a nondecreasing function of a single variable\n",
     "- $S(x,y)$ is the score.\n",
+    "\n",
     "\n",
     "Similar to how $\\phi''$ was our weighting function in the first example, in this case $g'$ is our weighting function.\n",
     "\n",
