change subderivative to derivative

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -40,9 +40,9 @@
     "- $\\phi'$ is the [subderivative](https://en.wikipedia.org/wiki/Subderivative) of $\\phi$. The subderivative is a generalisation of the derivative for convex functions and coincides with the derivative when the convex function is differentiable\n",
     "- $S(x,y)$ is the score.\n",
     "\n",
-    "In this chase, we choose $\\alpha=0.5$, since the 0.5-expectile is identical to the mean.\n",
+    "In this case, we choose $\\alpha=0.5$, since the 0.5-expectile is identical to the mean.\n",
     "\n",
-    "If one wants to control the relative importance of predictive performance across different decision thresholds, they must first create a weighting function $\\phi''$ which is the second subderivative of $\\phi$.\n",
+    "If one wants to control the relative importance of predictive performance across different decision thresholds, they must first create a weighting function $\\phi''$ which is the second derivative of $\\phi$.\n",
     "\n",
     "Let's assume that the importance of accurate prediction increases exponentially with increasing decision threshold $z$. We then need to determine our $\\phi(z)$ and $\\phi'(z)$ functions. \n",
     "\n",
