add note about threshold weighted scores

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -16,7 +16,11 @@
     "\n",
     "You may already know that the MSE is a consistent score for forecasting the mean and the MAE is a consistent score for forecasting the median. But did you know that there are a whole family of scores that are consistent for predicting the mean, median, or quantiles? \n",
     "\n",
-    "The consistent scoring module in `scores` provides access to these families of consistent scores hat can be used to tailor emphasis of predictive performance based on decision thresholds of interest.\n",
+    "The consistent scoring module in `scores` provides access to these families of consistent scores that can be used to tailor emphasis of predictive performance based on decision thresholds of interest.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Note:</b> Threshold weighted scoring functions will be added to scores. These threshold weighted scoring functions will use these consistent scoring functions and will allow users a more simplified approach to evaluating forecasts using scores that emphasise performance across different decision thresholds. Its tutorial notebook is expected to compliment this.\n",
+    "</div>\n",
     "\n",
     "### Example 1. A score consistent with the mean\n",
     "Let's jump into an example that illustrates a scoring function that is consistent with predicting the mean value using `scores`. Suppose we want to evaluate the performance of expected daily precipitation forecasts, but we want to place increasing importance on correctly forecasting extreme values. MSE is consistent with predicting the mean value, but weights all decision thresholds equally (as discussed further on).\n",
