add note about honest forecasts

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -9,7 +9,9 @@
     "A \"consistent scoring function\" is a scoring function where a forecaster's expected score will be optimised by following a forecast directive. An example of a forecast directive is to \"predict the mean (i.e., expected) rainfall amount\". Using a consistent scoring function ensures that a forecaster or forecast system developer isn't faced with the dilemma of whether to \n",
     "\n",
     "1. produce forecasts (or develop a forecast system) that optimises the expected verification score, or\n",
-    "2. produce an honest forecast (or develop an honest forecast system) that is optimal for the forecast directive. \n",
+    "2. produce an honest\\* forecast (or develop an honest forecast system) that is optimal for the forecast directive. \n",
+    "\n",
+    "\\* note that by \"honest\" we mean issuing a forecast that corresponds to a forecaster's true belief and has not been \"hedged\" ([Murphy 1978](https://doi.org/10.1175/1520-0477(1978)059<0371:HATMOE>2.0.CO;2)) with the goal of improving the verification score.\n",
     "\n",
     "Using a consistent scoring function to evaluate forecast performance ensures that objectives both 1 and 2 can be met without any tensions. For example, the Mean Squared Error (MSE) is a consistent score for forecasting the mean (i.e., expected) rainfall amount, since forecasting the \"mean rainfall amount\" will minimise the expected MSE. However the Mean Absolute Error (MAE) is not consistent with forecasting the mean value and is instead consistent with forecasting the median value. Consistent scoring functions are formally defined in ([Gneiting et al., 2011a](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
     "\n",
