fix rendering of notebook on docs

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -11,7 +11,7 @@
     "1. produce forecasts (or develop a forecast system) that optimises the expected verification score, or\n",
     "2. produce an honest\\* forecast (or develop an honest forecast system) that is optimal for the forecast directive. \n",
     "\n",
-    "\\* note that by \"honest\" we mean issuing a forecast that corresponds to a forecaster's true belief and has not been \"hedged\" ([Murphy 1978](https://doi.org/10.1175/1520-0477(1978)059<0371:HATMOE>2.0.CO;2)) with the goal of improving the verification score.\n",
+    "\\* note that by \"honest\" we mean issuing a forecast that corresponds to a forecaster's true belief and has not been \"hedged\" ([Murphy 1978](https://doi.org/10.1175/1520-0477(1978)059<0371:HATMOE>2.0.CO;2)) to try and improve the verification score by producing a forecast that does not correspond to their true belief.\n",
     "\n",
     "Using a consistent scoring function to evaluate forecast performance ensures that objectives both 1 and 2 can be met without any tensions. For example, the Mean Squared Error (MSE) is a consistent score for forecasting the mean (i.e., expected) rainfall amount, since forecasting the \"mean rainfall amount\" will minimise the expected MSE. However the Mean Absolute Error (MAE) is not consistent with forecasting the mean value and is instead consistent with forecasting the median value. Consistent scoring functions are formally defined in ([Gneiting et al., 2011a](https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.r10138)).\n",
     "\n",
@@ -39,6 +39,7 @@
     "$$\n",
     "\n",
     "Where:\n",
+    "\n",
     "- $x$ is the forecast\n",
     "- $y$ is the observation\n",
     "- $\\alpha$ is the expectile level\n",
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +220,7 @@
        "Text(0.5, 0.98, 'Murphy Score (for mean)')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +387,7 @@
        "Text(0.5, 0.98, 'Murphy Score (for 90th percentile)')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
